--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-   <meta charset="UTF-8" />
-   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-   <title>Document</title>
- </head>
- <body>
-   <h1>Hello, world!</h1>
-   <p>
-     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet
-     iaculis lorem non sollicitudin. Fusce elementum ac elit finibus auctor.
-     Curabitur orci sem, accumsan a diam sit amet, efficitur tristique velit.
-   </p>
-   <ul>
-     <li>First list item</li>
-     <li>Second list item</li>
-     <li>Third list item</li>
-   </ul>
- </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Mission to Mars</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    />
+  </head>
+  <body>
+    <div class="container-fluid">
+      <!-- Add Jumbotron to Header -->
+      <div class="jumbotron text-center">
+        <h1>Mission to Mars</h1>
+        <!-- Add a button to activate scraping script -->
+        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+      </div>
+      <!-- Add section for Mars News -->
+      <div class="row" id="mars-news">
+        <div class="col-md-12">
+          <div class="media">
+            <div class="media-body">
+              <h2>Latest Mars News</h2>
+              <h4 class="media-heading">{{ mars.news_title }}</h4>
+              <p>{{ mars.news_paragraph }}</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Section for Featured Image and Facts table -->
+      <div class="row" id="mars-featured-image">
+        <div class="col-md-8">
+          <h2>Featured Mars Image</h2>
+          <img
+            src="{{mars.featured_image }}"
+            class="img-responsive"
+            alt="Responsive image"
+            width = "300" height="300"
+          />
+        </div>
+        <div class="col-md-4">
+          <!-- Mars Facts -->
+            <h4>Mars Facts</h4>
+            {{ mars.facts | safe }}
+        </div>
+      </div>
+      <!--Section for full resolution images-->
+      <div class="text-center">
+        <h2>Mars Hemispheres</h2>
+      </div>
+        <div class="row">
+          {% for hemisphere in mars.hemispheres %}
+            <!--col-md-3 col-sm-6 sets the break points for resizing the web page-->
+            <div class="col-md-3 col-sm-6"> <!--Deliverable 3 Requirment-->
+              <a href={{ hemisphere.img_url }}>
+                <!--Designating images to be thumbnails and image responsive Del 3 Requirement-->
+                  <img class="img-thumbnail img-rounded" class="img-responsive" src="{{ hemisphere.img_url }}"></img>
+                  <div class="text-center">
+                    <h5>{{ hemisphere.title }}</h5>
+                  </div>
+              </a>
+            </div>
+          {% endfor %}  
+        </div>
+      </div>
+    </div>
+<!--The code below was added due to a suggestion fro the TA as it brings in the necessary java components-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+  </body>
 </html>
